[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-mem0"
dynamic = ["version"]
description = "OpenTelemetry Mem0 Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8, <3.13"
authors = [
    { name = "LoongSuite Python Agent Authors", email = "loongsuite-dev@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opentelemetry-api >= 1.20.0",
    "opentelemetry-instrumentation >= 0.41b0",
    "opentelemetry-semantic-conventions >= 0.41b0",
    "wrapt >= 1.14.0",
]

[project.optional-dependencies]
instruments = [
    "mem0ai >= 1.0.0",
]
test = [
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "opentelemetry-sdk >= 1.20.0",
    "opentelemetry-test-utils >= 0.41b0",
    "mem0ai >= 1.0.0",
]

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/mem0/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[project.entry-points.opentelemetry_instrumentor]
mem0 = "opentelemetry.instrumentation.mem0:Mem0Instrumentor"


